Fix ink-drop alignment for animated AppMenuButton.

The animated-button state overrides large parts of MenuButton, including
layouting. When animating AppMenuButton the ink drop still traces
image(), which is invisible. During layouting it positions new_icon_,
which replaces image(), but also positions image() even though it's
invisible, as the ink drop follows it. Ideally MenuButtons would work
with animated icons.

Layouting image() used GetLocalBounds() instead of GetContentsBounds()
to place the ink drop, but GetLocalBounds() doesn't take insets into
account, which are non-zero when the screen is maximized.

This caused the ink drop to be displaced by 2dp when maximized. The fix
just updates image() to follow new_icon_ so that the ink drop does as
well.

BUG=chromium:770807

Change-Id: Ifb3d9662aec1434708021904269969b832bbeb19
Reviewed-on: https://chromium-review.googlesource.com/699558
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506260}
Former-commit-id: f7c83a9f75cafa100d71789b6ff1cd8af5efb3e6